# fcs-parser

./: CMakeLists.txt  GraphRenderer.cpp  README.md
include/: FCSDataModel.h  FCSParser.h  GraphRenderer.h
src/: FCSParser.cpp
